# src/routes/patientCareRoutes.js
@@ -78,6 +78,12 @@ router.get(
   patientCareController.getHeartDiaryByDate
 );
 router.get(
+  '/users/:userId/diaries/:diaryId',
+  authenticate,
+  validateRequest(diaryParamsSchema, 'params'),
+  patientCareController.getHeartDiaryDetail
+);
+router.get(
   '/users/:userId/diaries/by-date/sleep',
   authenticate,
   validateRequest(userIdParamSchema, 'params'),
